# broiestbot

./: .gitignore  CLAUDE.md  Makefile  README.md  asgi.py  broiestbot.ini  config.py  gunicorn.conf.py  logger.py  main.py  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: pythonapp.yml
broiestbot/: __init__.py  bot.py
broiestbot/commands/: __init__.py  afterdark.py  definitions.py  embeds.py  images.py  llm.py  lyrics.py  markets.py  misc.py  movies.py  olympics.py  playstation.py  previews.py  tuner.py  video.py  weather.py
broiestbot/commands/footy/: __init__.py  goldenboot.py  lineups.py  live.py  liveodds.py  odds.py  predicts.py  standings.py  stats.py  teams.py  today.py  upcoming.py  util.py
broiestbot/commands/footy/tests/: conftest.py  test_live.py  test_liveodds.py  test_predicts.py
broiestbot/commands/images/: __init__.py  gifs.py  giphy.py  nsfw.py  random.py  reddit.py  storage.py
broiestbot/commands/mlb/: live.py  today.py  upcoming.py  util.py
broiestbot/commands/nba/: live.py  standings.py  today.py  upcoming.py
broiestbot/commands/nfl/: __init__.py  live.py  sleeper.py  today.py
broiestbot/commands/odds/: __init__.py  markets.py
broiestbot/commands/polls/: __init__.py  bachelor.py  change.py  tovala.py
broiestbot/commands/polls/tests/: conftest.py  test_tovala.py
broiestbot/commands/sumo/: __init__.py  matches.py  upcoming.py  util.py
broiestbot/commands/sumo/tests/: conftest.py  test_matches.py  test_upcoming.py
broiestbot/data/: __init__.py  chats.py  users.py
broiestbot/moderation/: __init__.py  ban.py  phrases.py  users.py
broiestbot/moderation/tests/: test_users.py
broiestbot/tests/: test_logger.py
ch/: __init__.py  ch_weights.py
ch/mixin/: __init__.py  _base.py  asyncio_cores.py  secure.py  windows_mainloop.py
chatango/: ch.py
clients/: __init__.py  crypto.py  ddog.py  gcs.py  geo.py  llm.py  psn.py  red.py  stock.py
database/: __init__.py  models.py
tests/: __init__.py  conftest.py  test_database.py
