[tool.poetry]
name = "broiestbot"
version = "0.1.1"
description = "Chat bot for the Chatango platform."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/toddbirchard/broiestbot/"
repository = "https://github.com/toddbirchard/broiestbot/"
documentation = "https://github.com/toddbirchard/broiestbot/blob/master/README.md"
keywords = ["Chatbot", "Chat", "Chatango", "Bot", "Python"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "*"
sqlalchemy = "*"
pymysql = "*"
google-cloud-storage = "*"
loguru = "*"
plotly = "*"
chart-studio = "*"
emoji = "*"
bs4 = "*"
wikipedia-api = "*"
cinemagoer = "*"
ipdata = "*"
boto = "*"
botocore = "*"
redis = "*"
praw = "*"
uWSGI = "*"
python-dotenv = "*"
twilio = "*"
lyricsgenius = "*"
pytz = "*"
pandas = "*"
html5lib = "*"
google-api-python-client = "*"
PyMultiDictionary = "*"
metadata-parser = "*"
PSNAWP = "*"
pytest = "*"
black = "*"
isort = "*"
flake8 = "*"
pylint = "*"
rq = "*"
rq-scheduler = "*"

[tool.poetry.scripts]
run = "wsgi:init_bot"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/broiestbot/issues"

[tool.poetry.group.dev.dependencies]
black = { version = "^23.7.0", allow-prereleases = true }

[build-system]
requires = ["poetry>=1.5.1"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["broiestbot", "chatango", "clients", "config", "logger"]

[tool.black]
line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = "C0103,C0301,W0703,W0621"
