[tool.poetry]
name = "broiestbot"
version = "0.1.1"
description = "Chat bot for the Chatango platform."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/toddbirchard/broiestbot/"
repository = "https://github.com/toddbirchard/broiestbot/"
documentation = "https://github.com/toddbirchard/broiestbot/blob/master/README.md"
keywords = ["Chatbot", "Chat", "Chatango", "Bot", "Python"]
classifiers = [
    "Programming Language :: Python :: 3.10 ",
    "Topic :: Communications :: Chat",

]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "*"
sqlalchemy = "*"
pymysql = "*"
google-cloud-storage = "*"
loguru = "*"
plotly = "*"
chart-studio = "*"
emoji = "*"
bs4 = "*"
wikipedia-api = "*"
cinemagoer = "*"
ipdata = "*"
boto = "*"
botocore = "*"
redis = "*"
praw = "*"
uWSGI = "*"
python-dotenv = "*"
twilio = "*"
lyricsgenius = "*"
pytz = "*"
pandas = "*"
html5lib = "*"
google-api-python-client = "*"
PyMultiDictionary = "*"
metadata-parser = "*"
PSNAWP = "*"
pytest = "*"
black = "*"
isort = "*"
flake8 = "*"
pylint = "*"
rq = "*"
rq-scheduler = "*"
nflgame = "*"
coverage = "^7.3.2"

[tool.poetry.scripts]
run = "wsgi:init_bot"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/broiestbot/issues"

[tool.poetry.group.dev.dependencies]
black = { version = "^23.10.1", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["broiestbot", "chatango", "clients", "config", "logger"]

[tool.black]
line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = "C0103,C0301,W0703,W0621"
