[tool.poetry]
name = "broiestbot"
version = "0.1.1"
description = "The Broiest of all chat bots for the Chatango platform."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/toddbirchard/broiestbot/"
repository = "https://github.com/toddbirchard/broiestbot/"
documentation = "https://github.com/toddbirchard/broiestbot/blob/master/README.md"
keywords = [
    "Chatbot",
    "Chat",
    "Chatango",
    "Bot",
    "Python"
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
requests = "*"
sqlalchemy = "*"
pymysql = "*"
google-cloud-storage = "*"
loguru = "*"
plotly = "*"
chart-studio = "*"
emoji = "*"
bs4 = "*"
wikipedia-api = "*"
cinemagoer = "*"
ipdata = "*"
boto = "*"
botocore = "*"
redis = "*"
praw = "*"
python-dotenv = "*"
twilio = "*"
lyricsgenius = "*"
pytz = "2025.2"
pandas = "*"
html5lib = "*"
google-api-python-client = "*"
PyMultiDictionary = "*"
metadata-parser = "*"
PSNAWP = "*"
pytest = "*"
black = "*"
isort = "*"
flake8 = "*"
pylint = "*"
rq = "*"
rq-scheduler = "*"
nflgame = "*"
coverage = "*"
gunicorn = ">=23.0.0"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/broiestbot/issues"

[build-system]
requires = ["poetry-core>=2.0.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]

[tool.poetry.plugins."poetry.application.plugin"]
export = "poetry_plugin_export.plugins:ExportApplicationPlugin"

[tool.isort]
profile = "black"
src_paths = [
    "broiestbot",
    "database", 
    "clients", 
    "config"
]

[tool.pylint.'MESSAGES CONTROL']
disable = "C0103,C0301,W0703,W0621"

[tool.black]
line-length = 120
target-version = ['py312']